# python_examples

./: .gitmodules  README.md  multiple_inheritance.py
loguru/: README.md  basic_logging.py  shell.nix
namespaces/: README.md  my_module.py  session.vim  simple.py  utils.py
namespaces/foo/bar/: __init__.py  baz.py  buz.py
namespaces/my_package/: __init__.py  module_a.py  module_b.py  my-cli.py  pyproject.toml
pyright-demo/: pyrightconfig.json
pyright-demo/src/: main.py
